--- a/src/HairBand/Themes/Default/footer.html
+++ b/src/HairBand/Themes/Default/footer.html
@@ -1,10 +1,10 @@
 
 <hr />
 <footer>
-    <p>&copy; {{Year}} - {{SiteTitle}}</p>
+    <p>&copy; {{current_date.year}} - {{site.title}}</p>
 </footer>
 
-<script src="{{ThemeFolder}}/lib/jquery/jquery.js"></script>
-<script src="{{ThemeFolder}}/lib/bootstrap/js/bootstrap.js"></script>
-<script src="{{ThemeFolder}}/lib/hammer.js/hammer.js"></script>
-<script src="{{ThemeFolder}}/lib/bootstrap-touch-carousel/js/bootstrap-touch-carousel.js"></script>
+<script src="{{theme_folder}}/lib/jquery/jquery.js"></script>
+<script src="{{theme_folder}}/lib/bootstrap/js/bootstrap.js"></script>
+<script src="{{theme_folder}}/lib/hammer.js/hammer.js"></script>
+<script src="{{theme_folder}}/lib/bootstrap-touch-carousel/js/bootstrap-touch-carousel.js"></script>
