--- a/src/HairBand/Themes/Happy/head.html
+++ b/src/HairBand/Themes/Happy/head.html
@@ -1,8 +1,8 @@
-
+﻿
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>{{PageTitle}} - {{SiteTitle}}</title>
+<title>{{page.title}} - {{site.title}}</title>
 
-<link rel="stylesheet" href="{{ThemeFolder}}/lib/bootstrap/css/bootstrap.css" />
-<link rel="stylesheet" href="{{ThemeFolder}}/lib/bootstrap-touch-carousel/css/bootstrap-touch-carousel.css" />
-<link rel="stylesheet" href="{{ThemeFolder}}/css/site.css" />
+<link rel="stylesheet" href="{{theme_folder}}/lib/bootstrap/css/bootstrap.css" />
+<link rel="stylesheet" href="{{theme_folder}}/lib/bootstrap-touch-carousel/css/bootstrap-touch-carousel.css" />
+<link rel="stylesheet" href="{{theme_folder}}/css/site.css" />
