--- a/src/HairBand/Themes/Happy/default.html
+++ b/src/HairBand/Themes/Happy/default.html
@@ -25,6 +25,10 @@
         </div>
     </div>
     <div class="container body-content">
+        {{page.custom_stuff}}
+        {{page.date}}
+        {{page.more_stuff}}
+        <h1>{{page.title}}</h1>
         {{content}}
         {% include 'footer' %}
     </div>
