--- a/src/HairBand/Themes/Happy/default.html
+++ b/src/HairBand/Themes/Happy/default.html
@@ -1,33 +1,13 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
+
     {% include 'head' %}
-</head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-controller="Home" asp-action="Index" class="navbar-brand">{{site.title}}</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="/home">Home</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
-                @await Html.PartialAsync("_LoginPartial")
-            </div>
-        </div>
-    </div>
+   {% include 'navbar' %}
     <div class="container body-content">
-        {{page.custom_stuff}}
-        {{page.date}}
-        {{page.more_stuff}}
+       custom: {{page.custom_stuff}}
+       date: {{page.date}}
+       more: {{page.more_stuff}}
         <h1>{{page.title}}</h1>
         {{content}}
         {% include 'footer' %}
