--- a/src/HairBand/Themes/Happy/_base.html
+++ b/src/HairBand/Themes/Happy/_base.html
@@ -2,18 +2,21 @@
 <html>
     {% include 'head' %}
 <body>
-   {% include 'navbar' %}
+    {% include 'navbar' %}
     <div class="container body-content">
 
         <h1>{{page.title}}</h1>
+        <h2>html</h2>
         {% block content %}
+        {{content}}
+        {%endblock%}
 
+        Pages:<br />
         {% for item in site.pages %}
-         PAGE: {{item.title}}<br />
+        PAGE: {{item.title}}<br />
         {% endfor %}
 
         {% include 'footer' %}
     </div>
 </body>
 </html>
-
