--- a/src/HairBand/Themes/Happy/navbar.html
+++ b/src/HairBand/Themes/Happy/navbar.html
@@ -11,7 +11,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 {% for c_page in site.pages %}
-                <li><a href="{{c_page.url}}">{{c_page.title}}</a></li>
+                <li><a href="{{c_page.url[0]}}">{{c_page.title}}</a></li>
                 {% endfor %}
             </ul>
             {% if user != null %}
