protected folders filter, admin setup

--- a/src/HairBand/Themes/Happy/navbar.html
+++ b/src/HairBand/Themes/Happy/navbar.html
@@ -14,7 +14,7 @@
                 <li><a href="{{c_page.url[0]}}">{{c_page.title}}</a></li>
                 {% endfor %}
             </ul>
-            {% if site.admin_enabled == true %}
+            {% if site.admin_enabled == "true" %}
             {% if user != null %}
             <form action="/_account/logoff" method="post" id="logoutForm" class="navbar-right">
                 <ul class="nav navbar-nav navbar-right">
