--- a/src/HairBand/Themes/Happy/navbar.html
+++ b/src/HairBand/Themes/Happy/navbar.html
@@ -19,7 +19,7 @@
             <form action="/_account/logoff" method="post" id="logoutForm" class="navbar-right">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="/_manage" title="Manage">Hello {{user.name}})!</a>
+                        <a href="/_account/manage" title="Manage">Hello {{user.name}})!</a>
                     </li>
                     <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
                 </ul>
