--- a/src/HairBand/Themes/Default/footer.html
+++ b/src/HairBand/Themes/Default/footer.html
@@ -1,7 +1,7 @@
 
 <hr />
 <footer>
-    <p>&copy; {{current_date.year}} - {{site.title}}</p>
+    <p>&copy; My Year {{site.time}} - {{site.name}}</p>
 </footer>
 
 <script src="{{theme_folder}}/lib/jquery/jquery.js"></script>
