--- a/src/HairBand/Themes/Happy/head.html
+++ b/src/HairBand/Themes/Happy/head.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{page.title}} - {{site.name}}</title>
 
-  <link rel="stylesheet" href="{{theme_folder}}/lib/bootstrap/css/bootstrap.css" />
-  <link rel="stylesheet" href="{{theme_folder}}/lib/bootstrap-touch-carousel/css/bootstrap-touch-carousel.css" />
-  <link rel="stylesheet" href="{{theme_folder}}/css/site.css" />
+  <link rel="stylesheet" href="{{lib_folder}}/bootstrap/css/bootstrap.css" />
+  <link rel="stylesheet" href="{{lib_folder}}/bootstrap-touch-carousel/css/bootstrap-touch-carousel.css" />
+  <link rel="stylesheet" href="{{theme_folder}}/css/main.css" />
 </head>
