--- a/src/HairBand/Themes/Happy/footer.html
+++ b/src/HairBand/Themes/Happy/footer.html
@@ -1,7 +1,7 @@
 
 <hr />
 <footer>
-    <p>&copy; My Year {{site.time}} - {{site.name}}</p>
+    <p>&copy; {{site.name}} {{site.time | date: "yyyy" }}</p>
 </footer>
 
 <script src="{{theme_folder}}/lib/jquery/jquery.js"></script>
