working on some riffs

--- a/src/HairBand/Themes/Default/default.html
+++ b/src/HairBand/Themes/Default/default.html
@@ -58,6 +58,7 @@
             </div>
         </div>
     </div>
+    {% riff menu  %}
     <div class="container body-content">
         <h1>{{page.title}}</h1>
 
