--- a/src/HairBand/Themes/Happy/base.html
+++ b/src/HairBand/Themes/Happy/base.html
@@ -2,7 +2,7 @@
 <html>
     {% include 'head' %}
 <body>
-    {% include 'navbar' %}
+    {% riff navbar %}
     <div class="container body-content">
         <h1>{{page.title}}</h1>
         {% block content %}
