--- a/src/HairBand/App_Data/_riffs/navbar.html
+++ b/src/HairBand/App_Data/_riffs/navbar.html
@@ -10,8 +10,25 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                {% for c_page in site.pages | sort: 'order', 'title' %}
-                <li><a href="{{c_page.url[0]}}">{{c_page.title}}</a></li>
+                {% for c_page in site.pages %}
+                {%if c_page.parent == '' %}
+                {%if c_page.children_count > 0 %}
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{c_page.title}} <span class="caret"></span></a>                  
+                    <ul class="dropdown-menu">
+                        {%for child in site.pages %}
+                        {%if child.parent == c_page.title %}
+                        <li><a href="/{{child.url[0]}}">{{child.title}}</a></li>
+                        {%endif%}
+                        {%endfor%}
+                    </ul>
+                </li>
+                {%else%}
+
+                <li><a href="/{{c_page.url[0]}}">{{c_page.title}}</a></li>
+                {%endif%}
+
+                {% endif %}
                 {% endfor %}
             </ul>
             {% if site.admin_enabled == "true" %}
