--- a/src/HairBand/App_Data/_riffs/navbar.html
+++ b/src/HairBand/App_Data/_riffs/navbar.html
@@ -33,24 +33,24 @@
                 {% endfor %}-->
                
                 {%for item in site.pages %}
-                {%if item.group == null %}
+                {%if item.group == 'navbar' %}
                 {%if item.url == node.url %}
-                <li><a href="/{{item.url[0]}}" class="active">{{item.title}}</a></li>
+                <li><a href="/{{item.url}}" class="active">{{item.title}}</a></li>
                 {%else%}
-                <li><a href="/{{item.url[0]}}">{{item.title}}</a></li>
+                <li><a href="/{{item.url}}">{{item.title}}</a></li>
                 {%endif%}
                 {%endif%}
                 {%endfor%}
 
-                {%for gr in site.groups %}
+                <!--{%for gr in site.groups %}
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{gr.Name}} <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">NAME: {{gr.Name}} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         {%assign pages = gr.pages %}
                         {%riff page_list %}
                     </ul>
                 </li>
-                {%endfor%}
+                {%endfor%}-->
             </ul>
             {% if site.admin_enabled == "true" %}
             {% if user.username != null %}
