groups working with directories, page list working

--- a/src/HairBand/App_Data/_riffs/navbar.html
+++ b/src/HairBand/App_Data/_riffs/navbar.html
@@ -35,9 +35,9 @@
                 {%for item in site.pages %}
                 {%if item.group == 'navbar' %}
                 {%if item.url == node.url %}
-                <li><a href="/{{item.url}}" class="active">{{item.title}}</a></li>
+                <li><a href="{{item.url}}" class="active">{{item.title}}</a></li>
                 {%else%}
-                <li><a href="/{{item.url}}">{{item.title}}</a></li>
+                <li><a href="{{item.url}}">{{item.title}}</a></li>
                 {%endif%}
                 {%endif%}
                 {%endfor%}
