--- a/src/HairBand/Themes/Readable/default.html
+++ b/src/HairBand/Themes/Readable/default.html
@@ -24,7 +24,7 @@
 <body>
     {% riff navbar  %}
     <div class="container body-content">
-        <h1>{{page.title}}</h1>
+        <!--<h1>{{page.title}}</h1>-->
 
         {% block content %}
         {{content}}
