--- a/src/HairBand/App_Data/_riffs/navbar.html
+++ b/src/HairBand/App_Data/_riffs/navbar.html
@@ -8,49 +8,17 @@
             </button>
             <a href="/" class="navbar-brand">{{site.name}}</a>
         </div>
-        <div class="navbar-collapse collapse">
+        <div class="navbar-collapse collapse">            
             <ul class="nav navbar-nav">
-                <!--{% for c_page in site.pages %}
-                {%if c_page.parent == '' %}
-                {%if c_page.children_count > 0 %}
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{c_page.title}} <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        {%for child in site.pages %}
-                        {%if child.parent == c_page.title %}
-                        <li><a href="/{{child.url[0]}}">{{child.title}}</a></li>
-                        {%endif%}
-                        {%endfor%}
-                    </ul>
-                </li>
-                {%else%}
-
-                <li><a href="/{{c_page.url[0]}}">{{c_page.title}}</a></li>
-                {%endif%}
-
-                {% endif %}
-
-                {% endfor %}-->
-               
                 {%for item in site.pages %}
                 {%if item.group == 'navbar' %}
                 {%if item.url == node.url %}
                 <li><a href="{{item.url}}" class="active">{{item.title}}</a></li>
-                {%else%}
+                {%else -%}
                 <li><a href="{{item.url}}">{{item.title}}</a></li>
-                {%endif%}
-                {%endif%}
-                {%endfor%}
-
-                <!--{%for gr in site.groups %}
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">NAME: {{gr.Name}} <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        {%assign pages = gr.pages %}
-                        {%riff page_list %}
-                    </ul>
-                </li>
-                {%endfor%}-->
+                {%endif %}
+                {%endif %}
+                {%endfor %}
             </ul>
             {% if site.admin_enabled == "true" %}
             {% if user.username != null %}
