--- a/src/HairBand/App_Data/_riffs/navbar.html
+++ b/src/HairBand/App_Data/_riffs/navbar.html
@@ -12,8 +12,8 @@
             <ul class="nav navbar-nav">
                 {%for item in site.pages %}
                 {%if item.group == 'navbar' %}
-                {%if item.url == node.url %}
-                <li><a href="{{item.url}}" class="active">{{item.title}}</a></li>
+                {%if node.url contains item.url %}
+                <li class="active"><a href="{{item.url}}">{{item.title}}</a></li>
                 {%else -%}
                 <li><a href="{{item.url}}">{{item.title}}</a></li>
                 {%endif %}
