--- a/src/HairBand/App_Data/_riffs/page_list.html
+++ b/src/HairBand/App_Data/_riffs/page_list.html
@@ -1,10 +1,9 @@
-﻿
-{%for item in site.pages %}
+﻿{%for item in site.pages %}
 {%if item.group == group  %}
-{%if item.url == node.url %}
-<li><a href="{{item.url}}" class="active">{{item.title}}</a></li>
+{%if node.url contains item.url %}
+<li class="active {{class}}"><a href="{{item.url}}">{{item.title}}</a></li>
 {%else%}
-<li><a href="{{item.url}}">{{item.title}}</a></li>
+<li class="{{class}}"><a href="{{item.url}}">{{item.title}}</a></li>
 {%endif -%}
 {%endif -%}
 {%endfor -%}
