Starting stubbing out a file manager in the admin area

--- a/src/HairBand/App_Data/_riffs/navbar.html
+++ b/src/HairBand/App_Data/_riffs/navbar.html
@@ -14,8 +14,12 @@
             </ul>
             {% if site.admin_enabled == "true" %}
             {% if user.username != null %}
+           
             <form action="/_account/logoff" method="post" id="logoutForm" class="navbar-right">
                 <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="/_admin">Admin</a>
+                    </li>
                     <li>
                         <a href="/_account/manage" title="Manage">Hello {{user.username}}!</a>
                     </li>
